normally all solved